--- a/charts/cp-kafka-connect/values.yaml
+++ b/charts/cp-kafka-connect/values.yaml
@@ -22,25 +22,6 @@ servicePort: 8083
 
 ## Kafka Connect properties
 ## ref: https://docs.confluent.io/current/connect/userguide.html#configuring-workers
-<<<<<<< HEAD
-configurationOverrides:
-  "plugin.path": "/usr/share/java,/usr/share/confluent-hub-components"
-  "key.converter": "io.confluent.connect.avro.AvroConverter"
-  "value.converter": "io.confluent.connect.avro.AvroConverter"
-  "key.converter.schemas.enable": "false"
-  "value.converter.schemas.enable": "false"
-  "internal.key.converter": "org.apache.kafka.connect.json.JsonConverter"
-  "internal.value.converter": "org.apache.kafka.connect.json.JsonConverter"
-  "config.storage.replication.factor": "3"
-  "offset.storage.replication.factor": "3"
-  "status.storage.replication.factor": "3"
-
-## Kafka Connect JVM Heap Option
-heapOptions: "-Xms512M -Xmx512M"
-
-## Additional env variables
-customEnv: {}
-=======
 connectKeyConverter: "io.confluent.connect.avro.AvroConverter"
 connectValueConverter: "io.confluent.connect.avro.AvroConverter"
 connectInternalKeyConverter: "org.apache.kafka.connect.json.JsonConverter"
@@ -52,7 +33,9 @@ pluginVolume: {}
 #  storageClass: basic
 #  size: 1Gi
 #  path: "/usr/share/java/custom"
->>>>>>> Added plugin volume support to persist custom plugins
+downloadPlugins: {}
+#  Download and extract each plugin tar.gz listed
+#  - https://repo1.maven.org/maven2/io/debezium/debezium-connector-mysql/0.8.3.Final/debezium-connector-mysql-0.8.3.Final-plugin.tar.gz
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
