--- a/charts/cp-kafka-connect/templates/deployment.yaml
+++ b/charts/cp-kafka-connect/templates/deployment.yaml
@@ -38,7 +38,7 @@ spec:
         - -c
         - |
           set -ex
-          mkdir /plugins/tar
+          mkdir -p /plugins/tar
           cd /plugins/tar
           {{- range .Values.downloadPlugins }}
           echo {{ . }} >> plugins
