Cert is added but cannot verify hostname.  Need to either change the presented hostname for the brokers to match the certs or disable hostname verification.  Seems like downward api for kube has been updated to support POD_NAME so that me help in this case.

--- a/charts/cp-kafka-connect/templates/plugins-pvc.yaml
+++ b/charts/cp-kafka-connect/templates/plugins-pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ template "cp-kafka-connect.fullname" . }}-plugins
 spec:
   accessModes:
-  - ReadWriteMany
+  - ReadWriteOnce
   storageClassName: {{ .Values.pluginVolume.storageClass }}
   resources:
     requests:
