--- a/charts/cp-kafka/templates/ssl-secret.yaml
+++ b/charts/cp-kafka/templates/ssl-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ssl.enabled }}
+{{- if .Values.global.kafka.ssl.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,10 +9,12 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 data:
-  kafka.broker.truststore.jks: {{ .Values.ssl.truststoreFileData }}
-  kafka.broker.keystore.jks: {{ .Values.ssl.keystoreFileData }}
+  kafka.broker.truststore.jks: |
+{{ .Values.global.kafka.ssl.truststoreFileData | indent 4 }}
+  kafka.broker.keystore.jks: |
+{{ .Values.global.kafka.ssl.keystoreFileData | indent 4 }}
 stringData:
-  keystore_credentials: {{ .Values.ssl.keystorePassword }}
-  key_credentials: {{ .Values.ssl.keyPassword }}
-  truststore_credentials: {{ .Values.truststorePassword }}
+  keystore_credentials: {{ .Values.global.kafka.ssl.keystorePassword }}
+  key_credentials: {{ .Values.global.kafka.ssl.keyPassword }}
+  truststore_credentials: {{ .Values.global.kafka.ssl.truststorePassword }}
 {{- end }}
