Got SSL working for brokers, now refactoring to move SSL secret to parent chart and source keystores from files, with optional override/standalone modes in the subcharts

--- a/charts/cp-kafka-connect/templates/plugins-pvc.yaml
+++ b/charts/cp-kafka-connect/templates/plugins-pvc.yaml
@@ -3,8 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: {{ template "cp-kafka-connect.fullname" . }}-plugins
 spec:
-  accessModes:
-  - ReadWriteOnce
+  accessModes: {{ .Values.pluginVolume.accessModes }}
   storageClassName: {{ .Values.pluginVolume.storageClass }}
   resources:
     requests:
