--- a/charts/cp-kafka/templates/ssl-secret.yaml
+++ b/charts/cp-kafka/templates/ssl-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.global.kafka.ssl.enabled }}
+{{- if .Values.ssl.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,12 +9,14 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 data:
-  kafka.broker.truststore.jks: |
-{{ .Values.global.kafka.ssl.truststoreFileData | indent 4 }}
-  kafka.broker.keystore.jks: |
-{{ .Values.global.kafka.ssl.keystoreFileData | indent 4 }}
+  {{ .Values.ssl.broker.truststoreFile }}: |
+{{- $path := printf "certs/%s" .Values.ssl.broker.truststoreFile }}
+{{ .Files.Get $path | b64enc | indent 4 }}
+  {{ .Values.ssl.broker.keystoreFile }}: |
+{{- $path := printf "certs/%s" .Values.ssl.broker.keystoreFile }}
+{{ .Files.Get $path | b64enc | indent 4 }}
 stringData:
-  keystore_credentials: {{ .Values.global.kafka.ssl.keystorePassword }}
-  key_credentials: {{ .Values.global.kafka.ssl.keyPassword }}
-  truststore_credentials: {{ .Values.global.kafka.ssl.truststorePassword }}
+  broker.keystore.password: {{ template "cp-kafka.ssl.broker.keystorePassword" . }}
+  broker.key.password: {{ template "cp-kafka.ssl.broker.keyPassword" . }}
+  broker.truststore.password: {{ template "cp-kafka.ssl.broker.truststorePassword" . }}
 {{- end }}
