--- a/charts/cp-kafka-connect/templates/ssl-secret.yaml
+++ b/charts/cp-kafka-connect/templates/ssl-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.global.kafka.ssl.enabled }}
+{{- if .Values.ssl.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -10,8 +10,8 @@ metadata:
     heritage: {{ .Release.Service }}
 data:
   kafka.client.truststore.jks: |-
-{{- $path := printf "certs/%s" .Values.global.kafka.ssl.client.truststoreFile }}
+{{- $path := printf "certs/%s" .Values.ssl.client.truststoreFile }}
 {{ .Files.Get $path | b64enc | indent 4 }}
 stringData:
-  truststore_credentials: {{ .Values.global.kafka.ssl.client.truststorePassword }}
+  truststore_credentials: {{ .Values.ssl.client.truststorePassword }}
 {{- end }}
