--- a/charts/cp-schema-registry/templates/deployment.yaml
+++ b/charts/cp-schema-registry/templates/deployment.yaml
@@ -81,12 +81,13 @@ spec:
           - name: SCHEMA_REGISTRY_HEAP_OPTS
             value: "{{ .Values.heapOptions }}"
           {{- if .Values.global.kafka.ssl.enabled }}
+          {{- if or .Values.ssl.enabled .Values.global.kafka.ssl.enabled }}
           - name: SCHEMA_REGISTRY_KAFKASTORE_SECURITY_PROTOCOL
             value: SSL
           - name: SCHEMA_REGISTRY_KAFKASTORE_SSL_TRUSTSTORE_LOCATION
-            value: /etc/kafka/secrets/kafka.client.truststore.jks
+            value: /etc/kafka/secrets/{{ template "cp-kafka.ssl.client.truststore" . }}
           - name: SCHEMA_REGISTRY_KAFKASTORE_SSL_TRUSTSTORE_PASSWORD
-            value: {{ .Values.global.kafka.ssl.client.truststorePassword }}
+            value: {{ template "cp-kafka.ssl.client.truststorePassword" . }}
           {{- end }}
           {{ range $configName, $configValue := .Values.configurationOverrides }}
           - name: SCHEMA_REGISTRY_{{ $configName | replace "." "_" | upper }}
@@ -104,7 +105,7 @@ spec:
           - name: JMX_PORT
             value: "{{ .Values.jmx.port }}"
           {{- end }}
-          {{- if .Values.global.kafka.ssl.enabled }}
+          {{- if or .Values.ssl.enabled .Values.global.kafka.ssl.enabled }}
           volumeMounts:
           - name: ssl
             mountPath: "/etc/kafka/secrets"
@@ -114,10 +115,10 @@ spec:
 {{ toYaml .Values.imagePullSecrets | indent 8 }}
       {{- end }}
       volumes:
-      {{- if .Values.global.kafka.ssl.enabled }}
+      {{- if or .Values.ssl.enabled .Values.global.kafka.ssl.enabled }}
       - name: ssl
         secret:
-          secretName: {{ template "cp-schema-registry.fullname" . }}-ssl-secret
+          secretName: {{ template "cp-kafka.ssl.secretName" . }}
       {{- end }}
       {{- if .Values.prometheus.jmx.enabled }}
       - name: jmx-config
