--- a/charts/cp-ksql-server/values.yaml
+++ b/charts/cp-ksql-server/values.yaml
@@ -23,6 +23,9 @@ servicePort: 8088
 ## KSQL JVM Heap Option
 heapOptions: "-Xms512M -Xmx512M"
 
+ssl:
+  client: {}
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
