SSL Client cert support added

--- a/templates/ssl-secret.yaml
+++ b/templates/ssl-secret.yaml
@@ -27,4 +27,5 @@ stringData:
   broker.truststore.password: {{ .Values.global.kafka.ssl.broker.truststorePassword }}
   client.truststore.password: {{ .Values.global.kafka.ssl.client.truststorePassword }}
   client.keystore.password: {{ .Values.global.kafka.ssl.client.keystorePassword }}
+  client.key.password: {{ .Values.global.kafka.ssl.client.keyPassword }}
 {{- end }}
