--- a/charts/cp-kafka-connect/templates/ssl-secret.yaml
+++ b/charts/cp-kafka-connect/templates/ssl-secret.yaml
@@ -12,6 +12,11 @@ data:
   kafka.client.truststore.jks: |-
 {{- $path := printf "certs/%s" .Values.ssl.client.truststoreFile }}
 {{ .Files.Get $path | b64enc | indent 4 }}
+  kafka.client.keystore.jks: |-
+{{- $path := printf "certs/%s" .Values.ssl.client.keystoreFile }}
+{{ .Files.Get $path | b64enc | indent 4 }}
 stringData:
-  truststore_credentials: {{ .Values.ssl.client.truststorePassword }}
+  client.truststore.password: {{ .Values.ssl.client.truststorePassword }}
+  client.keystore.password: {{ .Values.ssl.client.keystorePassword }}
+  client.key.password: {{ .Values.ssl.client.keyPassword }}
 {{- end }}
