--- a/charts/cp-kafka/values.yaml
+++ b/charts/cp-kafka/values.yaml
@@ -53,6 +53,7 @@ configurationOverrides:
   # PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
 ssl:
   broker: {}
+  client: {}
 
 ## Additional env variables
 customEnv: {}
