--- a/values.yaml
+++ b/values.yaml
@@ -50,11 +50,11 @@ cp-kafka:
     "log.dirs": /opt/kafka/data/logs
     "offsets.topic.replication.factor": 3
     "advertised.listeners": |-
-     EXTERNAL://${HOSTNAME}.confluent-cp-kafka-headless.cp-kafka.svc.dev.cluster.local:9093
+     EXTERNAL://${HOSTNAME}.confluent-cp-kafka-headless.team-appops.svc.dev.cluster.local:9093
   persistence:
     enabled: true
-    # storageClass: ""
-    size: 5Gi
+    storageClass: "hyperspeed"
+    size: 15Gi
     disksPerBroker: 1
   ssl:
     enabled: true
@@ -161,11 +161,11 @@ cp-kafka:
   ## If you do want to specify resources, uncomment the following lines, adjust them as necessary,
   ## and remove the curly braces after 'resources:'
   #  limits:
-  #   cpu: 100m
-  #   memory: 128Mi
+  #   cpu: 12288m
+  #   memory: 24Gi
   #  requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  #   cpu: 6144m
+  #   memory: 12Gi
 
 ## ------------------------------------------------------
 ## Schema Registry
@@ -382,8 +382,8 @@ global:
       truststorePassword: test1234
       client:
         auth: required
-        brokerPrincipal: CN=dev.kafka.domain.com
-        componentPrincipal: CN=internal.dev.kafka.domain.com
+        brokerPrincipal: CN=dev.kafka.idanalytics.com
+        componentPrincipal: CN=internal
         truststoreFile: kafka.client.truststore.jks
         truststorePassword: test1234
         keystoreFile: kafka.internal.keystore.jks
