--- a/templates/ssl-secret.yaml
+++ b/templates/ssl-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.global.kafka.ssl.enabled (ne .Values.global.kafka.ssl.secretName) }}
+{{- if .Values.global.kafka.ssl.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
