--- a/charts/cp-kafka/templates/ssl-secret.yaml
+++ b/charts/cp-kafka/templates/ssl-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.ssl.enabled (ne .Values.ssl.secretName) }}
+{{- if .Values.ssl.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
