--- a/values.yaml
+++ b/values.yaml
@@ -161,11 +161,11 @@ cp-kafka:
   ## If you do want to specify resources, uncomment the following lines, adjust them as necessary,
   ## and remove the curly braces after 'resources:'
   #  limits:
-  #   cpu: 12288m
-  #   memory: 24Gi
+  #   cpu: 100m
+  #   memory: 128Mi
   #  requests:
-  #   cpu: 6144m
-  #   memory: 12Gi
+  #   cpu: 100m
+  #   memory: 128Mi
 
 ## ------------------------------------------------------
 ## Schema Registry
