Typo in global templates/ssl-secret for labels

--- a/templates/ssl-secret.yaml
+++ b/templates/ssl-secret.yaml
@@ -4,8 +4,8 @@ kind: Secret
 metadata:
   name: {{ .Release.Name }}-kafka-ssl-secret
   labels:
-    app: {{ template "cp-kafka.name" . }}
-    chart: {{ template "cp-kafka.chart" . }}
+    app: {{ template "cp-helm-charts.name" . }}
+    chart: {{ template "cp-helm-charts.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 data:
