Changed self sign certs script, finalize adding Kafka TLS support to all components

--- a/charts/cp-control-center/values.yaml
+++ b/charts/cp-control-center/values.yaml
@@ -82,6 +82,9 @@ prometheus:
     ## See the `resources` documentation above for details.
     resources: {}
 
+ssl:
+  client: {}
+
 ## You can list load balanced service endpoint, or list of all brokers (which is hard in K8s).  e.g.:
 ## bootstrapServers: "PLAINTEXT://dozing-prawn-kafka-headless:9092"
 kafka:
