--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 charts/cp-kafka/requirements.lock
 charts/*/charts
 charts/*/requirements.lock
-certs
-ida-certs.sh
-ida-values.sh
+certs/*
+!certs/.gitkeep
 misc
