--- a/charts/cp-control-center/templates/deployment.yaml
+++ b/charts/cp-control-center/templates/deployment.yaml
@@ -57,23 +57,23 @@ spec:
             - name: CONTROL_CENTER_STREAMS_SECURITY_PROTOCOL
               value: SSL
             - name: CONTROL_CENTER_STREAMS_SSL_TRUSTSTORE_LOCATION
-              value: /etc/kafka/secrets/{{ template "cp-kafka.ssl.client.truststore" . }}
+              value: /etc/kafka/secrets/{{ template "cp-control-center.kafka.ssl.client.truststore" . }}
             - name: CONTROL_CENTER_STREAMS_SSL_TRUSTSTORE_PASSWORD
               valueFrom: 
                 secretKeyRef:
-                  name: {{ template "cp-kafka.ssl.secretName" . }}
+                  name: {{ template "cp-control-center.kafka.ssl.secretName" . }}
                   key: client.truststore.password
             - name: CONTROL_CENTER_STREAMS_SSL_KEYSTORE_LOCATION
-              value: /etc/kafka/secrets/{{ template "cp-kafka.ssl.client.keystore" . }}
+              value: /etc/kafka/secrets/{{ template "cp-control-center.kafka.ssl.client.keystore" . }}
             - name: CONTROL_CENTER_STREAMS_SSL_KEYSTORE_PASSWORD
               valueFrom: 
                 secretKeyRef:
-                  name: {{ template "cp-kafka.ssl.secretName" . }}
+                  name: {{ template "cp-control-center.kafka.ssl.secretName" . }}
                   key: client.keystore.password
             - name: CONTROL_CENTER_STREAMS_SSL_KEY_PASSWORD
               valueFrom: 
                 secretKeyRef:
-                  name: {{ template "cp-kafka.ssl.secretName" . }}
+                  name: {{ template "cp-control-center.kafka.ssl.secretName" . }}
                   key: client.key.password
             {{- end }}
             # Other configs
@@ -100,7 +100,7 @@ spec:
       {{- if or .Values.ssl.enabled .Values.global.kafka.ssl.enabled }}
       - name: ssl
         secret:
-          secretName: {{ template "cp-kafka.ssl.secretName" . }}
+          secretName: {{ template "cp-control-center.kafka.ssl.secretName" . }}
       {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
