--- a/charts/cp-control-center/templates/ssl-secret.yaml
+++ b/charts/cp-control-center/templates/ssl-secret.yaml
@@ -1,8 +1,8 @@
-{{- if .Values.ssl.enabled }}
+{{- if .Values.ssl.enabled  }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "cp-kafka.ssl.secretName" . }}
+  name: {{ template "cp-control-center.kafka.ssl.secretName" . }}
   labels:
     app: {{ template "cp-control-center.name" . }}
     chart: {{ template "cp-control-center.chart" . }}
