--- a/charts/cp-control-center/values.yaml
+++ b/charts/cp-control-center/values.yaml
@@ -82,13 +82,19 @@ prometheus:
     ## See the `resources` documentation above for details.
     resources: {}
 
-ssl:
-  client: {}
-
 ## You can list load balanced service endpoint, or list of all brokers (which is hard in K8s).  e.g.:
 ## bootstrapServers: "PLAINTEXT://dozing-prawn-kafka-headless:9092"
 kafka:
   bootstrapServers: ""
+
+# SSL enabled Kafka
+# If setting to true, you need to set the other attributes are set as well
+ssl:
+  enabled: false
+  # secretName: cp-control-center-secret   <- If you intend to pre-create the secret outside of helm chart, use this.  Otherwise, leave commented out
+  client: {}
+  #   truststoreFile: "truststore_under_certs_folder.jks"
+  #   keystoreFile: "keystore_under_certs_folder.jks"
 
 ## If the Kafka Chart is disabled a URL and port are required to connect
 ## e.g. gnoble-panther-cp-schema-registry:8081
@@ -103,4 +109,13 @@ cp-ksql-server:
 
 cp-zookeeper:
   ## If the Zookeeper Chart is disabled a URL and port are required to connect
-  url: ""  
+  url: ""
+
+
+## ------------------------------------------------------
+## Global variables
+## ------------------------------------------------------
+global:
+  kafka:
+    ssl:
+      enabled: false
