--- a/charts/cp-kafka/templates/statefulset.yaml
+++ b/charts/cp-kafka/templates/statefulset.yaml
@@ -49,7 +49,6 @@ spec:
       {{- if .Values.prometheus.jmx.enabled }}
       - name: prometheus-jmx-exporter
         image: "{{ .Values.prometheus.jmx.image }}:{{ .Values.prometheus.jmx.imageTag }}"
-        imagePullPolicy: "{{ .Values.prometheus.jmx.imagePullPolicy }}"
         command:
         - java
         - -XX:+UnlockExperimentalVMOptions
@@ -207,7 +206,7 @@ spec:
           {{- if or .Values.ssl.enabled .Values.global.kafka.ssl.enabled }}
           export KAFKA_ADVERTISED_LISTENERS=SSL://${POD_NAME}.{{ template "cp-kafka.fullname" . }}-headless.${POD_NAMESPACE}.svc.cluster.local:9093,EXTERNAL://${HOST_IP}:$((31090 + ${KAFKA_BROKER_ID})) && \
           {{- else }}
-          export KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${POD_IP}:9092{{ if kindIs "string" $advertisedListenersOverride }}{{ printf ",%s" $advertisedListenersOverride }}{{ end }} && \
+          export KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${POD_NAME}.{{ template "cp-kafka.fullname" . }}-headless.${POD_NAMESPACE}:9092{{ include "cp-kafka.configuration.advertised.listeners" . }} && \
           {{- end }}
           exec /etc/confluent/docker/run
         volumeMounts:
