--- a/requirements.yaml
+++ b/requirements.yaml
@@ -27,3 +27,7 @@ dependencies:
   version: 0.1.0
   repository: file://./charts/cp-control-center
   condition: cp-control-center.enabled
+- name: lk-kafka-utils
+  version: 0.1.0
+  repository: file://./charts/lk-kafka-utils
+  condition: lk-kafka-utils.enabled
