--- a/charts/cp-kafka-connect/templates/deployment.yaml
+++ b/charts/cp-kafka-connect/templates/deployment.yaml
@@ -120,19 +120,19 @@ spec:
             - name: CONNECT_SSL_KEYSTORE_LOCATION
               value: /etc/kafka/secrets/{{ template "cp-kafka.ssl.client.keystore" . }}
             - name: CONNECT_SSL_KEYSTORE_PASSWORD
-              valueFrom: 
+              valueFrom:
                 secretKeyRef:
                   name: {{ template "cp-kafka.ssl.secretName" . }}
                   key: client.keystore.password
             - name: CONNECT_SSL_KEY_PASSWORD
-              valueFrom: 
+              valueFrom:
                 secretKeyRef:
                   name: {{ template "cp-kafka.ssl.secretName" . }}
                   key: client.key.password
             - name: KAFKA_DISTRIBUTED_SSL_KEYSTORE_LOCATION
               value: /etc/kafka/secrets/{{ template "cp-kafka.ssl.client.keystore" . }}
             - name: KAFKA_DISTRIBUTED_SSL_KEYSTORE_PASSWORD
-              valueFrom: 
+              valueFrom:
                 secretKeyRef:
                   name: {{ template "cp-kafka.ssl.secretName" . }}
                   key: client.keystore.password
@@ -141,7 +141,35 @@ spec:
                 secretKeyRef:
                   name: {{ template "cp-kafka.ssl.secretName" . }}
                   key: client.key.password
+            - name: CONNECT_CONSUMER_SSL_KEYSTORE_LOCATION
+              value: /etc/kafka/secrets/{{ template "cp-kafka.ssl.client.keystore" . }}
+            - name: CONNECT_CONSUMER_SSL_KEYSTORE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "cp-kafka.ssl.secretName" . }}
+                  key: client.keystore.password
+            - name: CONNECT_CONSUMER_SSL_KEY_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "cp-kafka.ssl.secretName" . }}
+                  key: client.key.password
+            - name: CONNECT_PRODUCER_SSL_KEYSTORE_LOCATION
+              value: /etc/kafka/secrets/{{ template "cp-kafka.ssl.client.keystore" . }}
+            - name: CONNECT_PRODUCER_SSL_KEYSTORE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "cp-kafka.ssl.secretName" . }}
+                  key: client.keystore.password
+            - name: CONNECT_PRODUCER_SSL_KEY_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "cp-kafka.ssl.secretName" . }}
+                  key: client.key.password
             {{- end }}
+            {{- end }}
+            {{- range $key, $value := .Values.configurationOverrides }}
+            - name: {{ printf "CONNECT_%s" $key | replace "." "_" | upper | quote }}
+              value: {{ $value | quote }}
             {{- end }}
             {{- if .Values.jmx.port }}
             - name: KAFKA_JMX_PORT
