--- a/charts/lk-kafka-utils/templates/deployment.yaml
+++ b/charts/lk-kafka-utils/templates/deployment.yaml
@@ -174,6 +174,10 @@ spec:
             configMapKeyRef:
               name: global-config
               key: ELASYS_DB_NAME
+        {{- range $key, $value := .Values.customEnv }}
+        - name: {{ $key | quote }}
+          value: {{ $value | quote }}
+        {{- end }}
         {{- if or .Values.ssl.enabled .Values.global.kafka.ssl.enabled }}
         volumeMounts:
         - name: ssl
